# todo-api-ddd

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  mypy.ini  pyproject.toml
src/: app.py
src/api/router/: app.py
src/domain/entitties/: category.py  todo.py
src/domain/repositories/: category_repository.py  todo_repository.py
src/domain/services/: todo_service.py
src/router/: health.py
tests/: conftest.py
tests/e2e/: test_health.py
tests/unit/: test_todo_service.py
