[tool.poetry]
name = "todo-ddd"
version = "0.1.0"
description = ""
authors = ["bonetou <h.boneto@outlook.com>"]
readme = "README.md"
packages = [{include = "todo_ddd"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pydantic = "^1.10.5"
pytest = "^7.2.1"
httpx = "^0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
