[tool.poetry]
name = "todo-ddd"
version = "0.1.0"
description = ""
authors = ["bonetou <h.boneto@outlook.com>"]
readme = "README.md"
packages = [{include = "todo_ddd"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pydantic = "^1.10.5"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pre-commit = "^3.1.1"
mypy = "^1.0.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
